2008-04-15  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c,
	  src/e_ctrl.h: Change the tag add api. 

	* src/e_nav_taglist.c,
	src/e_nav_taglist.h: Sort the list each time before activating the
	list, and show the time interval string on label of the list. 

	* src/e_nav_item_location.c,
	  src/e_nav_item_location.h: Add a member, timestamp, in location
	  data. 

	* src/e_nav_dbus.c,
	  src/e_nav_dbus.h: Add diversity_object_lastseen_get api. 

	* src/e_mod_nav.c: When adding a location tag, set the lastseen value 
	(timestamp) in location's structure. 

2008-04-14  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_mod_nav.c: When init, default is lowest zoom level if cfg file open
	error. 
	
	* src/e_mod_config.c: Setup the config hash even if the file load
	error. Because that could work and be used when saving to a file.  

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_nav_item_location.c: Update the width and height when item
	added. 

	* data/themes/images/edit_send.png: Add image as flying menu's bg.

	* src/e_flyingmenu.c: Add a bg_obj.

	* src/widgets/e_nav_textedit.c: Change the theme of button.

	* src/e_nav_item_neo_me.c: Update the width and height when item
	added.

	* data/themes/diversity_nav.edc: Change the theme for button panel.

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/e_ctrl.c,
	  src/e_ctrl.h: Change API from self_get/set to neo_me_get/set.

	* src/e_nav_item_location.c: When sending SMS, get equipment directly from ctrl.
	
	* src/e_mod_nav.c: Self bard as one of neo_me_add arguments

	* src/e_nav_item_neo_me.c,
	  src/e_nav_item_neo_me.h: Add Diversity_Bard as a
	  member in neo_me internal structure.

2008-04-11  Jeremy Chang  <jeremy@openmoko.com>

	* src/widgets/e_nav_alert.c,
	  src/widgets/e_nav_alert.h,
	  src/widgets/Makefile.am,
	  data/themes/default.edc,
	  data/themes/Makefile.am,
	  data/themes/default_nav_alert.edc: Add alert widget
	that distinguish from dialog. 
	    