@@ -742,7 +742,7 @@ group {
 group {
    name: "modules/diversity_nav/location";
    parts {
-      part { name: "location";
+      part { name: "e.image.location";
          description { state: "default" 0.0;
             min: 48 48;
             max: 48 48;
@@ -755,31 +755,65 @@ group {
          mouse_events: 1;
          description { state: "default" 0.0;
             rel1 {
-               to_y: "location";
-               relative: 0.0 1.0;
+               to: "e.image.location";
+               relative: 0.7 0.25;
                offset: 0 0;
             }
             rel2 {
-               to_y: "location";
-               relative: 1.0 1.0;
+               to: "e.image.location";
+               relative: 1.0 0.25;
                offset: -1 0;
             }
-            align: 0.5 0.0;
+            align: 0.0 0.0;
             visible: 0;
-            color: 255 255 255 0;
+            color: 0 0 0 255;
             color3: 0 0 0 0;
             text {
                font: "Sans:style=Bold,Edje-Vera-Bold";
-               size: 14;
+               size: 18;
                min: 1 1;
-               align: 0.5 0.0;
+               align: 0.0 0.0;
             }
          }
          description { state: "visible" 0.0;
             inherit: "default" 0.0;
             visible: 1;
-            color: 255 255 255 255;
-            color3: 0 0 0 32;
+            color: 0 0 0 255;
+            color3: 0 0 0 0;
+         }
+      }
+      part { name: "e.text.name2";
+         type: TEXT;
+         effect: SOFT_SHADOW;
+         mouse_events: 1;
+         description { state: "default" 0.0;
+            rel1 {
+               to: "e.image.location";
+               relative: 0.7 0.6;
+               offset: 0 0;
+            }
+            rel2 {
+               to: "e.image.location";
+               relative: 1.0 0.6;
+               offset: -1 0;
+            }
+            align: 0.0 0.0;
+            visible: 0;
+            color: 51 51 51 255;
+            color3: 0 0 0 0;
+            text {
+               text: "Test";
+               font: "Sans:style=Bold,Edje-Vera-Bold";
+               size: 14;
+               min: 1 1;
+               align: 0.0 0.0;
+            }
+         }
+         description { state: "visible" 0.0;
+            inherit: "default" 0.0;
+            visible: 1;
+            color: 51 51 51 255;
+            color3: 0 0 0 0;
          }
       }
    }
@@ -789,21 +823,29 @@ group {
          signal: "e,state,active";
          source: "e";
          action: STATE_SET "visible" 0.0;
-         transition: DECELERATE 0.5;
+         transition: DECELERATE 0.0;
          target: "e.text.name";
+         target: "e.text.name2";
       }
       program {
          name: "disappear";
          signal: "e,state,passive";
          source: "e";
-         action: STATE_SET "default" 0.0;
-         transition: DECELERATE 0.5;
+         action: STATE_SET "default" 0.2;
+         transition: DECELERATE 0.0;
          target: "e.text.name";
+         target: "e.text.name2";
       }
       program {
          name: "menu_activate";
          signal: "mouse,down,*";
          source: "e.text.name";
+         action, SIGNAL_EMIT "MENU_ACTIVATE" "e.text.name"; 
+      }
+      program {
+         name: "menu_activate2";
+         signal: "mouse,down,*";
+         source: "e.text.name2";
          action, SIGNAL_EMIT "MENU_ACTIVATE" "e.text.name"; 
       }
    }
